<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/collapsing_toolbar_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MalariaTheme.AppBarOverlay.Light"
                    app:contentInsetEnd="0dp"
                    app:contentInsetLeft="0dp"
                    app:contentInsetRight="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/toolbar_title"
                        style="@style/CustomFontTextViewStyle.ClientList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:text="@string/return_to_previous_sbc_clients_page"
                        android:textColor="@color/customAppThemeBlue"
                        android:textSize="17sp" />
                </androidx.appcompat.widget.Toolbar>

                <LinearLayout
                    android:id="@+id/profile_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    app:layout_collapseMode="parallax">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageview_profile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_member"
                        app:civ_border_color="@color/transparent"
                        app:civ_border_width="3dp" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/textview_name"
                        style="@style/CustomFontTextViewStyle.ClientList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:text="Patient Name, Age"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/register_member_name_size" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/textview_gender"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="Gender"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/register_member_village_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/profile_dot_separator_margin"
                            android:layout_marginRight="@dimen/profile_dot_separator_margin"
                            android:text="@string/interpunct"
                            android:textColor="@android:color/black" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/textview_address"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:text="Address #24"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/register_member_village_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/profile_dot_separator_margin"
                            android:layout_marginRight="@dimen/profile_dot_separator_margin"
                            android:text="@string/interpunct"
                            android:textColor="@android:color/black" />


                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/textview_id"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:text="ID:123456"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/register_member_village_size" />
                    </LinearLayout>

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/family_sbc_head"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="0dp"
                        android:paddingTop="@dimen/register_list_top_bottom_min_padding"
                        android:text="@string/family_head"
                        android:textAllCaps="true"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/register_list_desc_size"
                        android:visibility="gone" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/primary_sbc_caregiver"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="0dp"
                        android:paddingTop="@dimen/register_list_top_bottom_min_padding"
                        android:text="@string/primary_care_giver"
                        android:textAllCaps="true"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/register_list_desc_size"
                        android:visibility="gone" />
                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/record_visit_sbc"
                layout="@layout/view_record_sbc" />

            <include layout="@layout/content_sbc_profile" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>